# Omni

./: .editorconfig  .gitignore  .mcp.json  ACTIONABLE_RECOMMENDATIONS.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_CRITIQUE_REPORT.md  CODE_REVIEW_FINDINGS.md  COMPLETE_CODE_QUALITY_REPORT.md  COMPREHENSIVE_CODEBASE_ANALYSIS_2026.md  DASHBOARD.md  FINAL_IMPROVEMENTS.md  FIXES_APPLIED.md  FRAMEWORK_UPGRADE_RECOMMENDATIONS.md  LICENSE  MCP_VERIFICATION_REPORT.md  MEMORY_AND_RAG_GUIDE.md  README.md  ULTRATHINK_ANALYSIS.md  build-and-push.sh  debug_query_analyzer.py  package.json  pnpm-lock.yaml  requirements-dev.txt  todo.md
omni_cortex/: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  ADDITIONAL_IMPROVEMENTS.md  AGENTS.md  ARCHITECTURE.md  BUG_FIXES_2026_01_04.md  BUG_HUNT_REPORT.md  CIRCUIT_BREAKER_TEST_RESULTS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEBASE_ISSUES.md  CODEOWNERS  CODE_REVIEW_REPORT.md  COMPLETED_ENHANCEMENTS.md  COMPREHENSIVE_CODE_ANALYSIS.md  DETAILED_ANALYSIS_FINDINGS.md  DOCKER.md  DOCKER_CRITICAL_FIXES.md  Dockerfile  ENHANCED_GATEWAY_VERIFICATION.md  ENHANCED_TOOLS_INTEGRATION.md  ENHANCED_VECTOR_SCHEMA.md  ENHANCEMENTS.md  FINAL_CHECKPOINT_STATUS.md  FINAL_STATUS_INTEGRATION_AND_STABILITY.md  FINAL_SUMMARY.md  FRAMEWORKS.md  GEMINI_API_COMPATIBILITY_FIX.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INCOMPLETE_CODE_AND_DOCS_AUDIT.md  INTEGRATION_AUDIT_REPORT.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS_COMPLETE.md  (+35 more)
omni_cortex/.claude/: ralph-loop.local.md
omni_cortex/.codex/: ralph-log.md  ralph-loop.md  ralph-prompt.md
omni_cortex/.devcontainer/: devcontainer.json
omni_cortex/.github/: dependabot.yml  pull_request_template.md
omni_cortex/app/: __init__.py  cli.py  collection_manager.py  enhanced_ingestion.py  enhanced_search_tools.py  graph.py  ingest_repo.py  ingest_watch.py  langchain_integration.py  schemas.py  state.py  state_utils.py  vector_schema.py
omni_cortex/docs/: API_REFERENCE.md  FRAMEWORK_GUIDE.md
omni_cortex/knowledge/: llm_best_practices.md
omni_cortex/mcp-config-examples/: README.md  claude-desktop.json  cursor-mcp.json  local-development.json  windsurf-mcp.json
omni_cortex/scripts/: BUG_FIX_DATASETS.md  TRAINING_DATASETS.md  debug_search.py  ingest_bug_fixes.py  ingest_training_data.py  seed_knowledge.py  startup.sh  test_mcp_search.py  validate_frameworks.py  verify_learning_offline.py
omni_cortex/server/: __init__.py  dashboard_server.py  framework_prompts.py  main.py
omni_cortex/tests/: __init__.py  (+2 more)
(+303 files in other folders)
