[project]
name = "omni-cortex"
version = "0.1.0"
description = "Headless MCP server routing tasks to 62 AI reasoning frameworks via LangGraph/LangChain"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "data",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "C90",    # mccabe complexity
    "PLR",    # pylint refactor (includes complexity)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "ARG001", # unused function argument (common in framework nodes)
    "PLR0913", # too many arguments (common in framework nodes)
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["app", "server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", ".venv/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "slow: Tests that take longer to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = "-v --tb=short --durations=10"

[tool.coverage.run]
source = ["app", "server"]
branch = true
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.deptry]
extend_exclude = [".venv", "tests", "scripts"]
ignore_notebooks = true
